examples/pass/shadowing.uplp
-- category = "value"
--
-- [metadata]
-- type = "Num"
-- value = 2
let a = 1 in
let a = 2 in
a