examples/fail/application_with_non_function.uplp
-- category = "error"
--
-- [metadata]
-- error = "Type.invalid_application"
--
-- [metadata.expectation]
-- applied_type = "Num"
let a = 1 in a 5